deploy/runboat-postgres/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: postgres
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: runboat-postgres
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: runboat
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: runboat-builds-db
      ports:
        - protocol: TCP
          port: 5432
